@@ -2558,6 +2558,10 @@ Prompt for confirmation before praying (default on).
 \item[\ib{pushweapon}]
 Using the `w' (wield) command when already wielding
 something pushes the old item into your alternate weapon slot (default off).
+%.lp
+\item[\ib{quiver\_fired}]
+Using the 'f' (fire) command when nothing is quivered, prompts for ammunition 
+to quiver, then fires it (default on).
 %.Ip
 \item[\ib{qwertz\_layout}]
 If {\tt QWERTZ} was set in {\it config.h} at compile-time this option can be
