@@ -14,6 +14,7 @@
 	  - DYWYPISI? (by Jafet)
 	  - MSGTYPE option (by Pasi Kallinen)
 	  - Sortloot (by Jukka Lahtinen)
+	  - Quiver Fired Ammunition (by Jukka Lahtinen)
 
 	* user interface improvements:
 	  - Autoexplore (from AceHack)
